fix: scrollbar visible dans Firefox

--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,7 @@
 ::-webkit-scrollbar {
   display:none;
 }
+:root{ scrollbar-width: none }
 /*
  .d8888b.                                                               
 d88P  Y88b                                                              
